--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,5 @@
+@import "rgbapng";
+
 // bootstrap
 @import "bootstrap/mixins";
 @import "bootstrap/variables";
@@ -15,8 +17,13 @@
 
 // site-specific
 @import "variables";
-//@import "mixins";
+@import "mixins";
+@import "nav";
 
+
+html, body{
+	margin:0;
+}
 
 .hide-text {
 	font: 0/0 a;
