--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -31,18 +31,19 @@ $sprites2x: sprite-map("my-sprites-retina/*.png", $spacing: 40px);
   @if $pad > 0 {
     padding: $pad;
   }
-  @media (#{-webkit-min-device-pixel-ratio}: #{1.6}), (#{min--moz-device-pixel-ratio}: #{1.6}), (#{-o-min-device-pixel-ratio}: #{3 / 2}), (#{min-device-pixel-ratio}: #{1.6}) {
-    & {
-      $pos: sprite-position($sprites2x, $name, -$pad * 2, -$pad * 2);
-      background-image: sprite-url($sprites2x);
-      background-position: nth($pos, 1) nth($pos, 2) / 2;
-      @include background-size(ceil(image-width(sprite-path($sprites2x)) / 2), auto);
-      // ^-- this is the "smarter" way to do this.
-      //     sprite-path() returns the path of the generated sprite sheet, which
-      //     image-width() calculates the width of. the ceil() is in place in case
-      //     you have sprites that have an odd-number of pixels in width (which
-      //     you shouldn't in the first place)
+  // UNCOMMENT THIS WHEN RETINA IMAGES ARE READY!
+  // @media (#{-webkit-min-device-pixel-ratio}: #{1.6}), (#{min--moz-device-pixel-ratio}: #{1.6}), (#{-o-min-device-pixel-ratio}: #{3 / 2}), (#{min-device-pixel-ratio}: #{1.6}) {
+  //   & {
+  //     $pos: sprite-position($sprites2x, $name, -$pad * 2, -$pad * 2);
+  //     background-image: sprite-url($sprites2x);
+  //     background-position: nth($pos, 1) nth($pos, 2) / 2;
+  //     @include background-size(ceil(image-width(sprite-path($sprites2x)) / 2), auto);
+  //     // ^-- this is the "smarter" way to do this.
+  //     //     sprite-path() returns the path of the generated sprite sheet, which
+  //     //     image-width() calculates the width of. the ceil() is in place in case
+  //     //     you have sprites that have an odd-number of pixels in width (which
+  //     //     you shouldn't in the first place)
 
-    }
-  }
+  //   }
+  // }
 }
