--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -5,3 +5,9 @@ $babyblue: #00d0fd;
 
 $nav-box: $yellow;
 $nav-content: rgba(0,208,253,0.70);
+
+
+
+// breakpoints
+$bp-medium-nav: 800px;
+$bp-small-nav:460px;
