--- a/sass/sections/_products.scss
+++ b/sass/sections/_products.scss
@@ -1,7 +1,106 @@
+$circleDiameter: 312px;
+$smallProductWidth: 206px;
+$smallProductHeight: 189px;
+$productPerRow: 3;
+
 #products{
-    .product-circle{
-        border-radius: 50%;
-        width: 312px;
-        height: 312px;
+
+    position:relative;
+
+    >.backgrounds{
+        position:relative;
+        width:100%;
+
+        .products-bg{
+            -moz-background-size: cover;
+            -webkit-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+            width:100%;
+            height:100%;
+        }
     }
+
+    .products{
+
+        position:absolute;
+        top:0px;
+        width:100%;
+        left: 50%;
+        margin-left: ($circleDiameter * $productPerRow) / -2;
+
+        .product-circle{
+            float:left;
+            margin:50px auto;
+            border-radius: 50%;
+            width: $circleDiameter;
+            height: $circleDiameter;
+            position:relative;
+            z-index:10;
+            top:0px;
+            cursor:pointer;
+
+            &.clear{
+                clear:both;
+            }
+
+            .product-shot{
+                //display:none;
+                position:absolute;
+                left:50%;
+                top:50%;
+                margin: ($smallProductHeight / -2) 0 0 ($smallProductWidth / -2);
+            }
+
+            .product-name{
+                display:none;
+                width:100%;
+                height:100%;
+
+                .the{
+                    @include body-text(1.0em, #000000);
+                    width:100%;
+                    text-align:center;
+                    position:absolute;
+                    top:65px;
+                    letter-spacing:2;
+                }
+
+                .product-name-container{
+                    display: table-cell;
+                    #position: absolute;
+                    #top: 50%;
+                    vertical-align: middle;
+                    height: (0.9 * $circleDiameter);
+                    width:$circleDiameter;
+                    h1{
+                        margin:0 auto;
+                        width:(0.8 * $circleDiameter);
+                        #position: relative;
+                        #top: -50%;
+                        text-align:center;
+                        @include body-text(2.1em, #000000);
+                        letter-spacing:2;
+                    }
+                }
+                .see-details{
+                    position:absolute;
+                    left:50%;
+                    margin-left:-50px;
+                    bottom:50px;
+                    @include sprite(see-details);
+                }
+            }
+        }
+        .product-circle:hover{
+            background:#FFFFFF !important;
+            .product-shot{
+                display:none;
+            }
+            .product-name{
+                display:block;
+            }
+        }
+    }
+
 }
