--- a/sass/sections/_instagram.scss
+++ b/sass/sections/_instagram.scss
@@ -2,9 +2,10 @@
 
     .ig-header{
         text-align:center;
-        padding:150px 0 128px 0;
+        padding:115px 0 128px 0;
         h1{
             @include body-text(3em);
+            font-weight:400;
             letter-spacing:10;
         }
         hr{
@@ -22,23 +23,29 @@
     }
 
     background: $instagram-bg;
-    padding:25px 45px 25px 45px;
+    padding:25px 0 25px 0;
     margin:0 auto;
     width:100%;
     .photos{
         margin:0 auto;
+        text-align:center;
         .photo-container{
-            margin:18px;
+            margin:0 9px 18px 9px;
             background-color: #fff; // layer fill content
             @include box-shadow(0 1px 5px rgba(0,0,0,.5)); // drop shadow
             padding:17px;
             width:237px;
             height:237px;
-            float:left;
+            display:inline-block;
+            cursor:pointer;
             .photo{
 
             }
+            &:hover{
+                @include box-shadow(0 2px 9px rgba(0,0,0,.5));
+            }
         }
+
     }
 
 }
