--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -14,6 +14,7 @@ $bp-medium-nav: 800px;
 $bp-small-nav: 460px;
 $bp-medium-product-circles: 900px;
 $bp-small-product-circles: $bp-small-nav;
+$bp-ig-detail: 640px;
 
 
 // font stacks
