--- a/sass/sections/_instagram.scss
+++ b/sass/sections/_instagram.scss
@@ -48,4 +48,101 @@
 
     }
 
+    .ig-detail{
+        position:fixed;
+        width:100%;
+        height:100%;
+        background-color:#7DCBC7;
+        z-index:10;
+        top:0px;
+        left:0px;
+        display:none;
+        .photo-detail-container{
+            background-color: #fff;
+            @include box-shadow(0 1px 5px rgba(0,0,0,.5)); // drop shadow
+            max-width:895px;
+            width:80%;
+            height:80%;
+            margin: 4% auto;
+            position:relative;
+            .photo-detail-img{
+                padding:30px;
+                max-width:640px;
+                min-width:250px;
+                min-height:250px;
+                height:85%;
+                float:left;
+                img{
+                    max-height:100%;
+                    max-width:100%;
+                }
+            }
+            .info-column{
+                display:none;
+                position:absolute;
+                right:0px;
+                padding:30px;
+                width:285px;
+                background: rgba(255, 255, 255, 0.8);
+                height:80%;
+                .user-info{
+                    position:relative;
+                    .user-icon{
+                        width:50px;
+                        height:50px;
+                        float:left;
+                    }
+                    .user-names{
+                        display:inline-block;
+                        padding:0 20px 0 20px;
+                        .full-name{
+                            @include body-text(1.5em);
+                            font-weight:700;
+                        }
+                        .user-name{
+                            @include body-text(0.75em);
+                            font-weight:400;
+                        }
+                    }
+                    .close{
+                        position:absolute;
+                        top:-15px;
+                        right:-15px;
+                        @include sprite(instagram_close);
+                        display:block;
+                        cursor:pointer;
+                    }
+                    clear:both;
+                    margin-bottom:30px;
+                }
+                hr{
+
+                }
+                .social-icons{
+                    margin:5px 0 20px 0;
+                    .fb{
+                        display:inline-block;
+                        @include sprite(ig-facebook-share);
+                        margin:0 15px 0 0;
+                    }
+                    .twitter{
+                        display:inline-block;
+                        @include sprite(ig-twitter-share);
+                    }
+                }
+                .caption{
+                    @include body-text(1em);
+                    font-weight:400;
+                }
+            }
+
+            @media screen and (min-width: $bp-ig-detail){
+                .info-column{
+                    display:block;
+                }
+            }
+
+        }
+    }
+
 }
