--- a/www_public/src/template/instagram.html
+++ b/www_public/src/template/instagram.html
@@ -3,9 +3,9 @@
     <hr>
     <h2>@TWEEDS</h2>
 </div>
+
 <div class="photos">
     {{#each this.photos}}
-        {{debug this}}
         <div class="photo-container" data-id="{{this.id}}">
             <div class="photo">
                 <img src="{{this.images.standard_resolution.url}}"/>
@@ -14,3 +14,5 @@
     {{/each}}
     <div style="clear:both;"></div>
 </div>
+
+<div class="ig-detail"></div>
