Tweeds // parallax progress
Signed-off-by: Nick Jonas <njonas45@gmail.com>

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,11 +3,12 @@
 $yellow: #fff200;
 $babyblue: #00d0fd;
 $beige: #ebe3da;
+$green: #398c00;
 
 $nav-box: $yellow;
 $nav-content: rgba(0,208,253,0.70);
 $instagram-bg: $beige;
-
+$young-buffalo-bg: $green;
 
 // breakpoints
 $bp-medium-nav: 800px;
