--- a/www_public/src/template/products.html
+++ b/www_public/src/template/products.html
@@ -6,7 +6,7 @@
 <div class="products">
 
     {{#each this.productRows.rows}}
-    <div class="product-row">
+    <div class="product-row" id="product-row-{{@index}}">
         {{#each this.row}}
            <div id="{{this.id}}" class="circle-{{@index}} product-circle" style="background-color:{{this.circleColor}};">
                 <div class="product-shot">
