--- a/sass/sections/_products.scss
+++ b/sass/sections/_products.scss
@@ -6,7 +6,8 @@ $productPerRow: 3;
 
 #products{
 
-    position:relative;
+    position:absolute;
+    top:0px;
     width:100%;
 
     >.backgrounds{
@@ -20,6 +21,7 @@ $productPerRow: 3;
             background-size: cover;
             width:100%;
             height:100%;
+            min-height:800px;
         }
     }
 
