--- a/sass/main.scss
+++ b/sass/main.scss
@@ -27,6 +27,9 @@
 @import "sections/products";
 @import "sections/instagram";
 @import "sections/young-buffalo-wear-tweeds";
+@import "sections/mask-transition";
+@import "sections/story";
+@import "sections/buy";
 
 html, body{
 	margin:0;
