--- a/www_public/src/template/products.html
+++ b/www_public/src/template/products.html
@@ -8,7 +8,7 @@
     {{#each this.productRows.rows}}
     <div class="product-row" id="product-row-{{@index}}">
         {{#each this.row}}
-           <div id="{{this.id}}" class="circle-{{@index}} product-circle" style="background-color:{{this.circleColor}};">
+           <div id="{{this.id}}" class="circle-{{@index}} product-circle" style="">
                 <div class="product-shot">
                     <img src="{{this.imgSmall}}"/>
                 </div>
