--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -9,6 +9,15 @@ $nav-box: $yellow;
 $nav-content: rgba(0,208,253,0.70);
 $instagram-bg: $beige;
 $young-buffalo-bg: $green;
+$product-detail-bg: $yellow;
+
+// z-indices
+$nav-z: 102;
+$product-detail-z: 200;
+$ig-detail-z: 10;
+$lookbook-arrow-z: 1;
+$product-backgrounds-z:100;
+$young-buffalo-triangle-z:100;
 
 // breakpoints
 $bp-medium-nav: 800px;
