--- a/sass/sections/_buy.scss
+++ b/sass/sections/_buy.scss
@@ -18,5 +18,21 @@
             letter-spacing:2;
             padding:204px 0 32px 0;
         }
+        .store-container{
+            position:relative;
+            margin:0 auto;
+            width:100%;
+            .store-btn{
+                margin:50px auto;
+            }
+
+            .surf-stitch{
+                margin-left:-125px;
+            }
+            .swell{
+                margin-left:25px;
+            }
+        }
+
     }
 }
