--- a/sass/sections/_products.scss
+++ b/sass/sections/_products.scss
@@ -4,142 +4,153 @@ $smallProductWidth: 206px;
 $smallProductHeight: 189px;
 $productPerRow: 3;
 
-#products{
+#products-scroll{ // .scrollblock
 
-    position:absolute;
-    top:0px;
-    width:100%;
+    height: 800px;
+    z-index:$product-backgrounds-z;
 
-    >.backgrounds{
-        position:relative;
-        width:100%;
+    #products-container{
+        #products{
 
-        .products-bg{
-            -moz-background-size: cover;
-            -webkit-background-size: cover;
-            -o-background-size: cover;
-            background-size: cover;
-            width:100%;
-            height:100%;
-            min-height:800px;
-        }
-    }
-
-    .products{
-
-        position:absolute;
-        top:-450px;
-        width:100%;
-
-        .product-row{
             position:absolute;
-            display:block;
-            margin:0 0 (66px + ($circleRadius)) 100px;
-            width:86%;
-            height: ($circleRadius * $productPerRow);
+            top:0px;
+            width:100%;
 
-            .circle-0{top:0 * $circleRadius; left: 0% * (100 / $productPerRow);};
-            .circle-1{top:1 * $circleRadius; left: 1% * (100 / $productPerRow);};
-            .circle-2{top:2 * $circleRadius; left: 2% * (100 / $productPerRow);};
-            .circle-3{top:3 * $circleRadius; left: 3% * (100 / $productPerRow);};
-            .circle-4{top:4 * $circleRadius; left: 4% * (100 / $productPerRow);};
-            .circle-5{top:5 * $circleRadius; left: 5% * (100 / $productPerRow);};
-
-            .product-circle{
-                margin:50px auto;
-                border-radius: 50%;
-                width: $circleDiameter;
-                height: $circleDiameter;
+            >.backgrounds{
                 position:absolute;
-                z-index:10;
-                cursor:pointer;
-                background:#FFFFFF;
+                width:100%;
 
-                .product-shot{
-                    //display:none;
-                    position:absolute;
-                    opacity:1;
-                    @include single-transition(opacity, .3s ease-out);
-                    left:50%;
-                    top:50%;
-                    margin: ($smallProductHeight / -2) 0 0 ($smallProductWidth / -2);
-                }
-
-                .product-name{
-                    display:none;
+                .products-bg{
+                    -moz-background-size: cover;
+                    -webkit-background-size: cover;
+                    -o-background-size: cover;
+                    background-size: cover;
                     width:100%;
                     height:100%;
-                    .the{
-                        @include body-text(1.0em, #000000);
-                        width:100%;
-                        text-align:center;
+                    min-height:800px;
+                    position:absolute;
+                    top:0px;
+                }
+            }
+
+            .products{
+
+                position:absolute;
+                top:0px;
+                width:100%;
+
+                .product-row{
+                    position:absolute;
+                    display:block;
+                    margin:0 0 (66px + ($circleRadius)) 100px;
+                    width:86%;
+                    //height: 800px;//($circleRadius * $productPerRow);
+
+                    .circle-0{top:0 * $circleRadius; left: 0% * (100 / $productPerRow);};
+                    .circle-1{top:1 * $circleRadius; left: 1% * (100 / $productPerRow);};
+                    .circle-2{top:2 * $circleRadius; left: 2% * (100 / $productPerRow);};
+                    .circle-3{top:3 * $circleRadius; left: 3% * (100 / $productPerRow);};
+                    .circle-4{top:4 * $circleRadius; left: 4% * (100 / $productPerRow);};
+                    .circle-5{top:5 * $circleRadius; left: 5% * (100 / $productPerRow);};
+
+                    .product-circle{
+                        margin:50px auto;
+                        border-radius: 50%;
+                        width: $circleDiameter;
+                        height: $circleDiameter;
                         position:absolute;
-                        top:65px;
-                        letter-spacing:2;
-                    }
-                    .product-name-container{
-                        display: table-cell;
-                        #position: absolute;
-                        #top: 50%;
-                        vertical-align: middle;
-                        height: (0.9 * $circleDiameter);
-                        width:$circleDiameter;
-                        h1{
-                            margin:0 auto;
-                            padding:20px 0 0 0;
-                            width:(0.8 * $circleDiameter);
-                            #position: relative;
-                            #top: -50%;
-                            text-align:center;
-                            @include body-text(2.1em, #000000);
-                            letter-spacing:2;
+                        cursor:pointer;
+                        background:#FFFFFF;
+
+                        .product-shot{
+                            //display:none;
+                            position:absolute;
+                            opacity:1;
+                            @include single-transition(opacity, .3s ease-out);
+                            left:50%;
+                            top:50%;
+                            margin: ($smallProductHeight / -2) 0 0 ($smallProductWidth / -2);
+                            width:$smallProductWidth;
+                            height:$smallProductHeight;
+                        }
+
+                        .product-name{
+                            display:none;
+                            width:100%;
+                            height:100%;
+                            .the{
+                                @include body-text(1.0em, #000000);
+                                width:100%;
+                                text-align:center;
+                                position:absolute;
+                                top:65px;
+                                letter-spacing:2;
+                            }
+                            .product-name-container{
+                                display: table-cell;
+                                #position: absolute;
+                                #top: 50%;
+                                vertical-align: middle;
+                                height: (0.9 * $circleDiameter);
+                                width:$circleDiameter;
+                                h1{
+                                    margin:0 auto;
+                                    padding:20px 0 0 0;
+                                    width:(0.8 * $circleDiameter);
+                                    #position: relative;
+                                    #top: -50%;
+                                    text-align:center;
+                                    @include body-text(2.1em, #000000);
+                                    letter-spacing:2;
+                                }
+                            }
+                            .see-details{
+                                position:absolute;
+                                left:50%;
+                                margin-left:-50px;
+                                bottom:50px;
+                                @include sprite(see-details);
+                            }
                         }
                     }
-                    .see-details{
-                        position:absolute;
-                        left:50%;
-                        margin-left:-50px;
-                        bottom:50px;
-                        @include sprite(see-details);
+                    .product-circle:hover{
+                        background:$yellow !important;
+                        @include single-transition(background, 0.3s ease-out);
+                        .product-shot{
+                            //display:none;
+                            opacity:0;
+                            @include single-transition(opacity, .15s ease-out);
+                        }
+                        .product-name{
+                            display:block;
+                        }
                     }
                 }
-            }
-            .product-circle:hover{
-                background:$yellow !important;
-                @include single-transition(background, 0.3s ease-out);
-                .product-shot{
-                    //display:none;
-                    opacity:0;
-                    @include single-transition(opacity, .15s ease-out);
-                }
-                .product-name{
-                    display:block;
-                }
-            }
-        }
 
-        @media screen and (max-width: $bp-medium-product-circles) {
-            .product-row{
-                height:auto;
-                width:50%;
-                margin:0 auto;
-                .product-circle{
-                    position:relative;
-                    float:left;
-                    display:block;
-                    top:0px;
-                    left:0px;
-                    margin:20px;
+                @media screen and (max-width: $bp-medium-product-circles) {
+                    .product-row{
+                        height:auto;
+                        width:50%;
+                        margin:0 auto;
+                        .product-circle{
+                            position:relative;
+                            float:left;
+                            display:block;
+                            top:0px;
+                            left:0px;
+                            margin:20px;
+                        }
+                    }
                 }
-            }
-        }
 
-        @media screen and (max-width: $bp-small-product-circles) {
-            .product-row{
-                width:inherit;
-            }
-        }
+                @media screen and (max-width: $bp-small-product-circles) {
+                    .product-row{
+                        width:inherit;
+                    }
+                }
 
+            }
+
+        }
     }
-
 }
