--- a/www_public/src/template/products.html
+++ b/www_public/src/template/products.html
@@ -1,12 +1,13 @@
 <div class="backgrounds">
     {{#each backgrounds}}
-        <div class="products-bg" style="background-image:url('/{{this}}');"></div>
+        <div class="products-bg" style="background-image:url('/{{this}}'); z-index:{{getProductBackgroundDepthIndex @index}}"></div>
     {{/each}}
 </div>
+
 <div class="products">
 
     {{#each this.productRows.rows}}
-    <div class="product-row" id="product-row-{{@index}}">
+    <div class="product-row" id="product-row-{{@index}}" style="z-index:{{getProductRowDepthIndex @index}}">
         {{#each this.row}}
            <div id="{{this.id}}" class="circle-{{@index}} product-circle" style="">
                 <div class="product-shot">
