--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,12 +4,13 @@ $yellow: #fff200;
 $babyblue: #00d0fd;
 $beige: #ebe3da;
 $green: #398c00;
+$light-gray: #ebebeb;
 
 $nav-box: $yellow;
 $nav-content: rgba(0,208,253,0.70);
 $instagram-bg: $beige;
 $young-buffalo-bg: $green;
-$product-detail-bg: $yellow;
+$product-detail-bg: $light-gray;
 
 // z-indices
 $nav-z: 102;
