--- a/sass/sections/_instagram.scss
+++ b/sass/sections/_instagram.scss
@@ -51,8 +51,8 @@
     .ig-detail{
         position:fixed;
         width:100%;
-        height:100%;
-        background-color:#7DCBC7;
+        height:0%;
+        background:#7DCBC7;
         z-index:$ig-detail-z;
         top:0px;
         left:0px;
