--- a/sass/sections/_story.scss
+++ b/sass/sections/_story.scss
@@ -14,7 +14,7 @@
 
 #story{
     width:100%;
-    height:auto;
+    height:800px;
     background: url(../img/src/story/storybackground.jpg) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
