--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import "animation";
 @import "compass/css3/transition";
 @import "compass/css3/box-shadow";
+@import "compass/css3/border-radius";
 
 // bootstrap
 @import "bootstrap/mixins";
