--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -11,6 +11,7 @@ $nav-content: rgba(0,208,253,0.70);
 $instagram-bg: $beige;
 $young-buffalo-bg: $green;
 $product-detail-bg: $light-gray;
+$preloader-bg: $yellow;
 
 // z-indices
 $nav-z: 102;
@@ -19,6 +20,7 @@ $ig-detail-z: 10;
 $lookbook-arrow-z: 1;
 $product-backgrounds-z:100;
 $young-buffalo-triangle-z:100;
+$preloader-z:300;
 
 // breakpoints
 $bp-medium-nav: 800px;
