--- a/sass/sections/_story.scss
+++ b/sass/sections/_story.scss
@@ -2,14 +2,22 @@
     @include body-text(3.0em);
     font-weight:400;
     letter-spacing:2;
-    padding:120px 0 45px 0;
+
+    //padding:120px 0 45px 0;
 }
 
 @mixin story-body(){
-    margin:0 auto;
+
     width:50%;
     font-family:$futura;
-    padding-bottom:215px;
+
+    display: table-cell;
+    vertical-align: middle;
+    text-align:center;
+
+    padding:0 25% 0 25%;
+
+    //padding-bottom:215px;
 }
 
 #story{
@@ -24,11 +32,21 @@
 
     .story-text-block{
         text-align:center;
-        h1{
-            @include story-headline();
-        }
+
+        position:relative;
+        width:100%;
+        height:100%;
+        margin:0 auto;
+
+        display:table;
+
+        // top:50%;
+        // margin-top:-180px;
         p{
             @include story-body();
+            .title{
+                @include story-headline();
+            }
         }
     }
 
@@ -36,6 +54,7 @@
         position:absolute;
         top:0px;
         width:100%;
+        height:100%;
         .slice-text{
             opacity:0;
             position:absolute;
@@ -50,7 +69,7 @@
     #kolohe{
         .kolohe-text{
             z-index:1;
-            h1, p{
+            p, p .title{
                 color:white;
             }
             p{
